# cmake_tuto

01_hello_cmake/: CMakeLists.txt
02_out_of_source/: hello_cmake.c
03_include/: CMakeLists.txt
03_include/inc/: hello_cmake.h
03_include/src/: main.c
04_library/: CMakeLists.txt
05_link/: CMakeLists.txt  build.sh
05_link/src/: main.c
06_compiler/: CMakeLists.txt
06_compiler/src/: hello_cmake.c
